kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jsdrome2020-deployment
  labels:
    app: jsdrome2020-deployment-label
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jsdrome2020-app
  template:
    metadata:
      labels:
        app: jsdrome2020-app
        tier: frontend
    spec:
      containers:
      - name: jsdrome2020-container
        image: jsdrome/jsdrome2020
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 5000
