kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: jsdrome2020-service
  labels:
    app: jsdrome2020-app
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: http-server
  selector:
    app: jsdrome2020-app
    tier: frontend
